# vision-embedding-based-image-deduplication

./: README.md  pyproject.toml
src/: cli.py  embedder.py  make_collage.py  utils.py  visualize.py
src/visioncache.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
visioncache_output/: embeddings.npy  faiss.index  files.json
